--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -134,7 +134,7 @@ oauthlib==3.2.2
 odfpy==1.4.1
 openpyxl==3.1.2
 orderedmultidict==1.0.1
-packaging==23.1
+packaging
 parso==0.8.3
 pexpect==4.8.0
 phonenumbers==8.13.50
@@ -173,9 +173,9 @@ svglib==1.5.1
 tablib==3.5.0
 text-unidecode==1.3
 tinycss2==1.2.1
-tomli==2.0.1
+tomli
 traitlets==5.9.0
-typing_extensions==4.7.1
+typing_extensions
 typish==1.9.3
 Unidecode==1.3.8
 urllib3==1.26.16
