--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "sass-loader": "^13.3.2",
         "style-loader": "^3.3.3",
         "svg-url-loader": "^8.0.0",
+        "swiper": "^11.2.0",
         "ts-loader": "^9.4.4",
         "typescript": "^5.1.6",
         "vue": "^3.3.4",
